apps/postgres/03-postgres-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.19.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9187
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 60
            failureThreshold: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres-exporter
  ports:
    - name: metrics
      port: 9187
      targetPort: metrics
