apps/postgres/04-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: postgres
spec:
  replicas: 1
  strategy:
        type: Recreate # ensure only one pod is running at a time, important for stateful or deployment with persistent storage
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:
        fsGroup: 5050
        fsGroupChangePolicy: "OnRootMismatch"

      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.16
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsUser: 5050
            runAsGroup: 5050

          ports:
            - name: http
              containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi

          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
            - name: pgadmin-config
              mountPath: /pgadmin4/config_local.py
              subPath: config_local.py
              readOnly: true
            - name: pgadmin-oidc
              mountPath: /etc/pgadmin/oidc
              readOnly: true
            - name: homelab-trust
              mountPath: /etc/homelab/trust
              readOnly: true

      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
        - name: pgadmin-oidc
          secret:
            secretName: pgadmin-oidc-secret
            items:
              - key: clientSecret
                path: client-secret
        - name: homelab-trust
          configMap:
            name: caddy-trust-bundle
            items:
              - key: ca-bundle.pem
                path: ca-bundle.pem

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgres
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: postgres
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.lab
      secretName: pgadmin-lab-tls
  rules:
    - host: pgadmin.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
